<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="visible">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:background="#FF0000">

        <TextView
            android:id="@+id/t2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingTop="5dp"
            android:text="  Workshop Registration"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/t3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t2"
            android:layout_marginTop="-15dp"
            android:layout_marginLeft="15dp"
            android:textColor="#FFFFFF"
            android:paddingTop="0dp"
            android:text="@string/reg" />
    </RelativeLayout>

    <TextView
        android:id="@+id/t4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/t5"
            android:layout_width="64dp"
            android:layout_height="50dp"
            android:hint="@string/title"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"/>

        <EditText
            android:id="@+id/t6"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:hint="@string/first"
            android:layout_alignLeft="@id/t5"
            android:layout_marginLeft="70dp"/>

        <EditText
            android:id="@+id/t7"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:hint="@string/last"
            android:layout_alignLeft="@id/t6"
            android:layout_marginLeft="100dp"/>
        <EditText
            android:id="@+id/t8"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:hint=" Suffix"
            android:layout_alignLeft="@id/t7"
            android:layout_marginLeft="100dp"/>


    </RelativeLayout>

    <TextView
        android:id="@+id/t9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Address"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/add1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="-10dp"
        android:inputType="textPostalAddress" />
    <TextView
        android:id="@+id/t11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addr"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/add2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="-10dp"
        android:inputType="textPostalAddress" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/city"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="City"
            android:layout_marginLeft="15dp"
            android:inputType="textPostalAddress" />

        <Spinner
            android:id="@+id/state"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="10dp"
            android:spinnerMode="dropdown" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/postal"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:ems="10"
            android:hint="Postal Code"
            android:inputType="number" />

        <Spinner
        android:id="@+id/count"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="10dp"
        android:spinnerMode="dropdown" />
    </RelativeLayout>
    <TextView
        android:id="@+id/em"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:ems="10"
        android:layout_marginTop="-10dp"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/b"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="130dp"
        android:text="Submit"
        android:textColor="#FFFFFF"
        android:background="#FF0000"
        android:onClick="sub"/>
</LinearLayout>